Adding translation to prompt suggestions

--- a/src/lib/i18n/locales/fr-CA/translation.json
+++ b/src/lib/i18n/locales/fr-CA/translation.json
@@ -12,6 +12,7 @@
 	"A task model is used when performing tasks such as generating titles for chats and web search queries": "Un modèle de tâche est utilisé lors de l’exécution de tâches telles que la génération de titres pour les conversations et les requêtes de recherche sur le web.",
 	"a user": "un utilisateur",
 	"About": "À propos",
+	"about the Roman Empire": "à propos de l'Empire romain",
 	"Account": "Compte",
 	"Account Activation Pending": "Activation du compte en attente",
 	"Accurate information": "Information exacte",
@@ -138,6 +139,7 @@
 	"Copy last response": "Copier la dernière réponse",
 	"Copy Link": "Copier le lien",
 	"Copying to clipboard was successful!": "La copie dans le presse-papiers a réussi !",
+	"Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Pourriez-vous commencer par me demander dans quelles situations je procrastine le plus, puis me donner quelques suggestions pour y remédier ?",
 	"Create a model": "Créer un modèle",
 	"Create Account": "Créer un compte",
 	"Create new key": "Créer une nouvelle clé principale",
@@ -237,7 +239,7 @@
 	"Enter Serpstack API Key": "Entrez la clé API Serpstack",
 	"Enter stop sequence": "Entrez la séquence d'arrêt",
 	"Enter Tavily API Key": "Entrez la clé API Tavily",
-	"Enter Tika Server URL": "",
+	"Enter Tika Server URL": "Entrez l'URL du serveur TIKA",
 	"Enter Top K": "Entrez les Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "Entrez l'URL (par ex. {http://127.0.0.1:7860/})",
 	"Enter URL (e.g. http://localhost:11434)": "Entrez l'URL (par ex. http://localhost:11434)",
@@ -247,6 +249,8 @@
 	"Enter Your Role": "Entrez votre rôle",
 	"Error": "Erreur",
 	"Experimental": "Expérimental",
+	"Explain options trading": "Expliquez le commerce d'options",
+	"Explain options trading in simple terms if I'm familiar with buying and selling stocks.": "Expliquez le commerce d'options en termes simples si je suis familier avec l'achat et la vente d'actions.",
 	"Export": "Exportation",
 	"Export All Chats (All Users)": "Exporter toutes les conversations (tous les utilisateurs)",
 	"Export chat (.json)": "Exporter la discussion (.json)",
@@ -273,6 +277,7 @@
 	"Fluidly stream large external response chunks": "Diffuser de manière fluide de larges portions de réponses externes",
 	"Focus chat input": "Se concentrer sur le chat en entrée",
 	"Followed instructions perfectly": "A parfaitement suivi les instructions",
+	"for what to do with my kids' art": "que faire des œuvres d'art de mes enfants",
 	"Form": "Formulaire",
 	"Format your variables using square brackets like this:": "Formatez vos variables en utilisant des crochets comme suit :",
 	"Frequency Penalty": "Pénalité de fréquence",
@@ -286,6 +291,8 @@
 	"Generate Image": "Générer une image",
 	"Generating search query": "Génération d'une requête de recherche",
 	"Generation Info": "Informations sur la génération",
+	"Give me ideas": "Donnez-moi des idées",
+	"give me tips": "donnez-moi des conseils",
 	"Global": "Mondial",
 	"Good Response": "Bonne réponse",
 	"Google PSE API Key": "Clé API Google PSE",
@@ -294,10 +301,13 @@
 	"has no conversations.": "n'a aucune conversation.",
 	"Hello, {{name}}": "Bonjour, {{name}}.",
 	"Help": "Aide",
+	"Help me study": "Aidez-moi à étudier",
+	"Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "Aidez-moi à étudier le vocabulaire : écrivez une phrase pour que je remplisse le blanc, et j'essaierai de choisir la bonne option.",
 	"Hide": "Cacher",
 	"Hide Model": "Masquer le modèle",
 	"How can I help you today?": "Comment puis-je vous être utile aujourd'hui ?",
 	"Hybrid Search": "Recherche hybride",
+	"if I'm familiar with buying and selling stocks": "si je suis familier avec l'achat et la vente d'actions",
 	"Image Generation (Experimental)": "Génération d'images (expérimental)",
 	"Image Generation Engine": "Moteur de génération d'images",
 	"Image Settings": "Paramètres de l'image",
@@ -396,6 +406,7 @@
 	"num_thread (Ollama)": "num_thread (Ollama)",
 	"OAuth ID": "ID OAuth",
 	"October": "Octobre",
+	"of a website's sticky header": "de l'en-tête autocollant d'un site web",
 	"Off": "Désactivé",
 	"Okay, Let's Go!": "D'accord, on y va !",
 	"OLED Dark": "Noir OLED",
@@ -421,6 +432,7 @@
 	"OpenAI URL/Key required.": "URL/Clé OpenAI requise.",
 	"or": "ou",
 	"Other": "Autre",
+	"Overcome procrastination": "Surmonter la procrastination",
 	"Password": "Mot de passe",
 	"PDF document (.pdf)": "Document au format PDF  (.pdf)",
 	"PDF Extract Images (OCR)": "Extraction d'images PDF (OCR)",
@@ -540,6 +552,8 @@
 	"short-summary": "résumé concis",
 	"Show": "Montrer",
 	"Show Admin Details in Account Pending Overlay": "Afficher les détails de l'administrateur dans la superposition en attente du compte",
+	"Show me a code snippet": "Montrez-moi un extrait de code",
+	"Show me a code snippet of a website's sticky header in CSS and JavaScript.": "Montrez-moi un extrait de code de l'en-tête autocollant d'un site Web en CSS et JavaScript.",
 	"Show Model": "Montrer le modèle",
 	"Show shortcuts": "Afficher les raccourcis",
 	"Show your support!": "Montre ton soutien !",
@@ -564,6 +578,8 @@
 	"Tags": "Balises",
 	"Tap to interrupt": "Appuyez pour interrompre",
 	"Tavily API Key": "Clé API Tavily",
+	"Tell me a fun fact": "Racontez-moi un fait amusant",
+	"Tell me a random fun fact about the Roman Empire": "Racontez-moi un fait amusant au hasard sur l'Empire romain",
 	"Tell us more:": "Dites-nous en plus à ce sujet : ",
 	"Temperature": "Température",
 	"Template": "Template",
@@ -644,6 +660,7 @@
 	"variable": "variable",
 	"variable to have them replaced with clipboard content.": "variable pour qu'elles soient remplacées par le contenu du presse-papiers.",
 	"Version": "Version améliorée",
+	"vocabulary for a college entrance exam": "vocabulaire pour un examen d'entrée à l'université",
 	"Voice": "Voix",
 	"Warning": "Avertissement !",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Avertissement : Si vous mettez à jour ou modifiez votre modèle d'encodage, vous devrez réimporter tous les documents.",
@@ -656,6 +673,7 @@
 	"Webhook URL": "URL du webhook",
 	"WebUI Settings": "Paramètres de WebUI",
 	"WebUI will make requests to": "WebUI effectuera des requêtes vers",
+	"What are 5 creative things I could do with my kids' art? I don't want to throw them away, but it's also so much clutter.": "Donnez-moi 5 idées créatives que je pourrais faire avec l'art de mes enfants? Je ne veux pas les jeter, mais c'est aussi tellement encombrant.",
 	"What’s New in": "Quoi de neuf",
 	"When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "Lorsque l'historique est désactivé, les nouvelles conversations sur ce navigateur ne seront pas enregistrés dans votre historique sur aucun de vos appareils.",
 	"Whisper (Local)": "Whisper (local)",
