--- a/src/lib/i18n/locales/en-CA/translation.json
+++ b/src/lib/i18n/locales/en-CA/translation.json
@@ -12,6 +12,7 @@
 	"A task model is used when performing tasks such as generating titles for chats and web search queries": "",
 	"a user": "",
 	"About": "",
+	"about the Roman Empire": "",
 	"Account": "",
 	"Account Activation Pending": "",
 	"Accurate information": "",
@@ -138,6 +139,7 @@
 	"Copy last response": "",
 	"Copy Link": "",
 	"Copying to clipboard was successful!": "",
+	"Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "",
 	"Create a model": "",
 	"Create Account": "",
 	"Create new key": "",
@@ -255,6 +257,8 @@
 	"Enter Your Role": "",
 	"Error": "",
 	"Experimental": "",
+	"Explain options trading": "",
+	"Explain options trading in simple terms if I'm familiar with buying and selling stocks.": "",
 	"Export": "",
 	"Export All Chats (All Users)": "",
 	"Export chat (.json)": "",
@@ -282,6 +286,7 @@
 	"Fluidly stream large external response chunks": "",
 	"Focus chat input": "",
 	"Followed instructions perfectly": "",
+	"for what to do with my kids' art": "",
 	"Form": "",
 	"Format your variables using square brackets like this:": "",
 	"Frequency Penalty": "",
@@ -303,6 +308,8 @@
 	"Generating search query": "",
 	"Generation Info": "",
 	"Get up and running with": "",
+	"Give me ideas": "",
+	"give me tips": "",
 	"Global": "",
 	"Good Response": "",
 	"Google PSE API Key": "",
@@ -311,11 +318,14 @@
 	"has no conversations.": "",
 	"Hello, {{name}}": "",
 	"Help": "",
+	"Help me study": "",
+	"Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option.": "",
 	"Hide": "",
 	"Hide Model": "",
 	"How can I help you today?": "",
 	"Hybrid Search": "",
 	"I acknowledge that I have read and I understand the implications of my action. I am aware of the risks associated with executing arbitrary code and I have verified the trustworthiness of the source.": "",
+	"if I'm familiar with buying and selling stocks": "",
 	"Image Generation (Experimental)": "",
 	"Image Generation Engine": "",
 	"Image Settings": "",
@@ -415,6 +425,7 @@
 	"num_thread (Ollama)": "",
 	"OAuth ID": "",
 	"October": "",
+	"of a website's sticky header": "",
 	"Off": "",
 	"Okay, Let's Go!": "",
 	"OLED Dark": "",
@@ -440,6 +451,7 @@
 	"OpenAI URL/Key required.": "",
 	"or": "",
 	"Other": "",
+	"Overcome procrastination": "",
 	"Password": "",
 	"PDF document (.pdf)": "",
 	"PDF Extract Images (OCR)": "",
@@ -560,6 +572,8 @@
 	"short-summary": "",
 	"Show": "",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show me a code snippet": "",
+	"Show me a code snippet of a website's sticky header in CSS and JavaScript.": "",
 	"Show Model": "",
 	"Show shortcuts": "",
 	"Show your support!": "",
@@ -586,6 +600,8 @@
 	"Tags": "",
 	"Tap to interrupt": "",
 	"Tavily API Key": "",
+	"Tell me a fun fact": "",
+	"Tell me a random fun fact about the Roman Empire": "",
 	"Tell us more:": "",
 	"Temperature": "",
 	"Template": "",
@@ -673,6 +689,7 @@
 	"variable": "",
 	"variable to have them replaced with clipboard content.": "",
 	"Version": "",
+	"vocabulary for a college entrance exam": "",
 	"Voice": "",
 	"Warning": "",
 	"Warning:": "",
@@ -686,6 +703,7 @@
 	"Webhook URL": "",
 	"WebUI Settings": "",
 	"WebUI will make requests to": "",
+	"What are 5 creative things I could do with my kids' art? I don't want to throw them away, but it's also so much clutter.": "",
 	"What’s New in": "",
 	"When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "",
 	"Whisper (Local)": "",
