--- a/src/lib/i18n/locales/languages.json
+++ b/src/lib/i18n/locales/languages.json
@@ -124,6 +124,10 @@
 		"title": "Serbian (Српски)"
 	},
 	{
+		"code": "th-TH",
+		"title": "Thai (ภาษาไทย)"
+	},
+	{
 		"code": "tr-TR",
 		"title": "Turkish (Türkçe)"
 	},
