--- a/src/lib/i18n/locales/lt-LT/translation.json
+++ b/src/lib/i18n/locales/lt-LT/translation.json
@@ -1,5 +1,5 @@
 {
-	"'s', 'm', 'h', 'd', 'w' or '-1' for no expiration.": "'s', 'm', 'h', 'd', 'w' arba '-1' kad neišteitų iš galiojimo.",
+	"'s', 'm', 'h', 'd', 'w' or '-1' for no expiration.": "'s', 'm', 'h', 'd', 'w' arba '-1' kad galiojimas neturėtų pabaigos.",
 	"(Beta)": "(Beta)",
 	"(e.g. `sh webui.sh --api --api-auth username_password`)": "",
 	"(e.g. `sh webui.sh --api`)": "(pvz. `sh webui.sh --api`)",
@@ -13,12 +13,12 @@
 	"a user": "naudotojas",
 	"About": "Apie",
 	"Account": "Paskyra",
-	"Account Activation Pending": "",
+	"Account Activation Pending": "Laukiama paskyros patvirtinimo",
 	"Accurate information": "Tiksli informacija",
-	"Active Users": "",
-	"Add": "",
+	"Active Users": "Aktyvūs vartotojai",
+	"Add": "Pridėti",
 	"Add a model id": "",
-	"Add a short description about what this model does": "",
+	"Add a short description about what this model does": "Trumpas modelio aprašymas",
 	"Add a short title for this prompt": "Pridėti trumpą šios užklausos pavadinimą",
 	"Add a tag": "Pridėti žymą",
 	"Add custom prompt": "Pridėti užklausos šabloną",
@@ -29,13 +29,13 @@
 	"Add Model": "Pridėti modelį",
 	"Add Tags": "Pridėti žymas",
 	"Add User": "Pridėti naudotoją",
-	"Adjusting these settings will apply changes universally to all users.": "Šių nustatymų pakeitimas bus pritakytas visiems naudotojams.",
+	"Adjusting these settings will apply changes universally to all users.": "Šių nustatymų pakeitimas bus pritaikytas visiems naudotojams.",
 	"admin": "Administratorius",
-	"Admin": "",
-	"Admin Panel": "Administratorių panelė",
+	"Admin": "Administratorius",
+	"Admin Panel": "Administravimo panelė",
 	"Admin Settings": "Administratorių nustatymai",
 	"Admins have access to all tools at all times; users need tools assigned per model in the workspace.": "",
-	"Advanced Parameters": "Gilieji nustatymai",
+	"Advanced Parameters": "Daugiau nustatymų",
 	"Advanced Params": "",
 	"all": "visi",
 	"All Documents": "Visi dokumentai",
@@ -43,11 +43,11 @@
 	"Allow": "Leisti",
 	"Allow Chat Deletion": "Leisti pokalbių ištrynimą",
 	"Allow non-local voices": "",
-	"Allow User Location": "",
+	"Allow User Location": "Leisti nustatyti vartotojo lokaciją",
 	"Allow Voice Interruption in Call": "",
 	"alphanumeric characters and hyphens": "skaičiai, raidės ir brūkšneliai",
 	"Already have an account?": "Ar jau turite paskyrą?",
-	"an assistant": "assistentas",
+	"an assistant": "asistentas",
 	"and": "ir",
 	"and create a new shared link.": "sukurti naują dalinimosi nuorodą",
 	"API Base URL": "API basės nuoroda",
@@ -56,10 +56,10 @@
 	"API keys": "API raktai",
 	"April": "Balandis",
 	"Archive": "Archyvai",
-	"Archive All Chats": "",
+	"Archive All Chats": "Archyvuoti visus pokalbius",
 	"Archived Chats": "Archyvuoti pokalbiai",
 	"are allowed - Activate this command by typing": "leistina - aktyvuokite komandą rašydami",
-	"Are you sure?": "Are esate tikri?",
+	"Are you sure?": "Ar esate tikri?",
 	"Attach file": "Pridėti failą",
 	"Attention to detail": "Dėmesys detalėms",
 	"Audio": "Audio įrašas",
@@ -72,16 +72,16 @@
 	"available!": "prieinama!",
 	"Back": "Atgal",
 	"Bad Response": "Neteisingas atsakymas",
-	"Banners": "",
+	"Banners": "Pranešimai (baneriai)",
 	"Base Model (From)": "",
 	"Batch Size (num_batch)": "",
 	"before": "prieš",
 	"Being lazy": "Būvimas tingiu",
 	"Brave Search API Key": "",
 	"Bypass SSL verification for Websites": "Išvengti SSL patikros puslapiams",
-	"Call": "",
+	"Call": "Skambutis",
 	"Call feature is not supported when using Web STT engine": "",
-	"Camera": "",
+	"Camera": "Kamera",
 	"Cancel": "Atšaukti",
 	"Capabilities": "",
 	"Change Password": "Keisti slaptažodį",
@@ -89,7 +89,7 @@
 	"Chat Background Image": "",
 	"Chat Bubble UI": "",
 	"Chat Controls": "",
-	"Chat direction": "",
+	"Chat direction": "Teksto kryptis",
 	"Chat History": "Pokalbių istorija",
 	"Chat History is off for this browser.": "Šioje naršyklėje pokalbių istorija išjungta.",
 	"Chats": "Pokalbiai",
@@ -101,8 +101,8 @@
 	"Chunk Params": "Blokų nustatymai",
 	"Chunk Size": "Blokų dydis",
 	"Citation": "Citata",
-	"Clear memory": "",
-	"Click here for help.": "Paspauskite čia dėl pagalbos.",
+	"Clear memory": "Išvalyti atmintį",
+	"Click here for help.": "Paspauskite čia norėdami gauti pagalbos.",
 	"Click here to": "Paspauskite čia, kad:",
 	"Click here to download user import template file.": "",
 	"Click here to select": "Spauskite čia norėdami pasirinkti",
@@ -112,7 +112,7 @@
 	"click here.": "paspauskite čia.",
 	"Click on the user role button to change a user's role.": "Paspauskite ant naudotojo rolės mygtuko tam, kad pakeisti naudotojo rolę.",
 	"Clipboard write permission denied. Please check your browser settings to grant the necessary access.": "",
-	"Clone": "",
+	"Clone": "Klonuoti",
 	"Close": "Uždaryti",
 	"Code formatted successfully": "",
 	"Collection": "Kolekcija",
@@ -121,11 +121,11 @@
 	"ComfyUI Base URL is required.": "ComfyUI bazės nuoroda privaloma",
 	"Command": "Command",
 	"Concurrent Requests": "",
-	"Confirm": "",
+	"Confirm": "Patvirtinti",
 	"Confirm Password": "Patvirtinkite slaptažodį",
 	"Confirm your action": "",
 	"Connections": "Ryšiai",
-	"Contact Admin for WebUI Access": "",
+	"Contact Admin for WebUI Access": "Susisiekite su administratoriumi dėl prieigos",
 	"Content": "Turinys",
 	"Content Extraction": "",
 	"Context Length": "Konteksto ilgis",
@@ -138,13 +138,13 @@
 	"Copy last response": "Kopijuoti paskutinį atsakymą",
 	"Copy Link": "Kopijuoti nuorodą",
 	"Copying to clipboard was successful!": "La copie dans le presse-papiers a réussi !",
-	"Create a model": "",
-	"Create Account": "Créer un compte",
+	"Create a model": "Sukurti modelį",
+	"Create Account": "Sukurti naują paskyrą",
 	"Create new key": "Sukurti naują raktą",
 	"Create new secret key": "Sukurti naują slaptą raktą",
 	"Created at": "Sukurta",
 	"Created At": "Sukurta",
-	"Created by": "",
+	"Created by": "Sukūrė",
 	"CSV Import": "",
 	"Current Model": "Dabartinis modelis",
 	"Current Password": "Esamas slaptažodis",
@@ -218,7 +218,7 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Embedding modelis nustatytas kaip\"{{embedding_model}}\"",
 	"Enable Chat History": "Aktyvuoti pokalbių istoriją",
 	"Enable Community Sharing": "",
-	"Enable New Sign Ups": "Aktyvuoti naujas registracijas",
+	"Enable New Sign Ups": "Leisti naujas registracijas",
 	"Enable Web Search": "",
 	"Enabled": "",
 	"Engine": "",
@@ -250,7 +250,7 @@
 	"Enter URL (e.g. http://localhost:11434)": "Įveskite nuorododą (pvz. http://localhost:11434",
 	"Enter Your Email": "Įveskite el. pašto adresą",
 	"Enter Your Full Name": "Įveskite vardą bei pavardę",
-	"Enter your message": "",
+	"Enter your message": "Įveskite žinutę",
 	"Enter Your Password": "Įveskite slaptažodį",
 	"Enter Your Role": "Įveskite savo rolę",
 	"Error": "",
@@ -278,7 +278,7 @@
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
-	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Nepavyko nsutatyti profilio nuotraukos",
+	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Nepavyko nustatyti profilio nuotraukos",
 	"Fluidly stream large external response chunks": "Sklandžiai transliuoti ilgus atsakymus",
 	"Focus chat input": "Fokusuoti žinutės įvestį",
 	"Followed instructions perfectly": "Tobulai sekė instrukcijas",
@@ -351,11 +351,11 @@
 	"Last Modified": "",
 	"Light": "Šviesus",
 	"Listening...": "",
-	"LLMs can make mistakes. Verify important information.": "Dideli kalbos modeliai gali klysti. Patikrinkite atsakymų teisingumą.",
+	"LLMs can make mistakes. Verify important information.": "LLM gali klysti. Visada tikrinkite atsakymų teisingumą.",
 	"Local Models": "",
 	"LTR": "",
 	"Made by OpenWebUI Community": "Sukurta OpenWebUI bendruomenės",
-	"Make sure to enclose them with": "Užtikrinktie, kad įtraukiate viduje:",
+	"Make sure to enclose them with": "Užtikrinkite, kad įtraukiate viduje:",
 	"Manage": "",
 	"Manage Models": "Tvarkyti modelius",
 	"Manage Ollama Models": "Tvarkyti Ollama modelius",
@@ -401,7 +401,7 @@
 	"New Chat": "Naujas pokalbis",
 	"New Password": "Naujas slaptažodis",
 	"No content to speak": "",
-	"No documents found": "",
+	"No documents found": "Dokumentų nerasta",
 	"No file selected": "",
 	"No results found": "Rezultatų nerasta",
 	"No search query generated": "",
@@ -473,7 +473,7 @@
 	"RAG Template": "RAG šablonas",
 	"Read Aloud": "Skaityti garsiai",
 	"Record voice": "Įrašyti balsą",
-	"Redirecting you to OpenWebUI Community": "Perkeliam Jus į OpenWebUI bendruomenę",
+	"Redirecting you to OpenWebUI Community": "Nukreipiame Jus į OpenWebUI bendruomenę",
 	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "",
 	"Refused when it shouldn't have": "Atmesta kai neturėtų būti atmesta",
 	"Regenerate": "Generuoti iš naujo",
@@ -523,7 +523,7 @@
 	"Searxng Query URL": "",
 	"See readme.md for instructions": "Žiūrėti readme.md papildomoms instrukcijoms",
 	"See what's new": "Žiūrėti naujoves",
-	"Seed": "Sėkla",
+	"Seed": "Seed",
 	"Select a base model": "",
 	"Select a engine": "",
 	"Select a function": "",
@@ -545,7 +545,7 @@
 	"Serply API Key": "",
 	"Serpstack API Key": "",
 	"Server connection verified": "Serverio sujungimas patvirtintas",
-	"Set as default": "Nustatyti numatytąjį",
+	"Set as default": "Nustatyti kaip numatytąjį",
 	"Set Default Model": "Nustatyti numatytąjį modelį",
 	"Set embedding model (e.g. {{model}})": "Nustatyti embedding modelį",
 	"Set Image Size": "Nustatyti paveikslėlių dydį",
@@ -561,7 +561,7 @@
 	"Share to OpenWebUI Community": "Dalintis su OpenWebUI bendruomene",
 	"short-summary": "trumpinys",
 	"Show": "Rodyti",
-	"Show Admin Details in Account Pending Overlay": "",
+	"Show Admin Details in Account Pending Overlay": "Rodyti Administratoriaus kontaktus laukimo lange",
 	"Show Model": "",
 	"Show shortcuts": "Rodyti trumpinius",
 	"Show your support!": "",
@@ -683,16 +683,16 @@
 	"Web API": "",
 	"Web Loader Settings": "Web krovimo nustatymai",
 	"Web Params": "Web nustatymai",
-	"Web Search": "",
-	"Web Search Engine": "",
+	"Web Search": "Web paieška",
+	"Web Search Engine": "Paieškos variklis",
 	"Webhook URL": "Webhook nuoroda",
 	"WebUI Settings": "WebUI parametrai",
 	"WebUI will make requests to": "WebUI vykdys užklausas",
 	"What’s New in": "Kas naujo",
 	"When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "Kai istorija išjungta, pokalbiai neatsiras jūsų istorijoje.",
 	"Whisper (Local)": "",
-	"Widescreen Mode": "",
-	"Workspace": "",
+	"Widescreen Mode": "Plačiaekranis režimas",
+	"Workspace": "Aplinkos nustatymas",
 	"Write a prompt suggestion (e.g. Who are you?)": "Parašykite užklausą",
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Parašyk santrumpą trumpesnę nei 50 žodžių šiam tekstui: [tekstas]",
 	"Yesterday": "Vakar",
@@ -701,10 +701,10 @@
 	"You cannot clone a base model": "",
 	"You have no archived conversations.": "Jūs neturite archyvuotų pokalbių",
 	"You have shared this chat": "Pasidalinote šiuo pokalbiu",
-	"You're a helpful assistant.": "Esi asistentas.",
-	"You're now logged in.": "Esate prisijungę.",
-	"Your account status is currently pending activation.": "",
+	"You're a helpful assistant.": "Esi paslaugus asistentas.",
+	"You're now logged in.": "Sėkmingai prisijungėte.",
+	"Your account status is currently pending activation.": "Jūsų paskyra laukia aktyvacijos patvirtinimo.",
 	"Your entire contribution will go directly to the plugin developer; Open WebUI does not take any percentage. However, the chosen funding platform might have its own fees.": "",
 	"Youtube": "Youtube",
-	"Youtube Loader Settings": "Youtube krovimo nustatymai"
+	"Youtube Loader Settings": "Youtube Loader nustatymai"
 }
