--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -360,6 +360,7 @@
 	"Light": "亮色",
 	"Listening...": "正在聆聽...",
 	"LLMs can make mistakes. Verify important information.": "LLM 可能會產生錯誤。請驗證重要資訊。",
+	"Lobe Chat": "Lobe 聊天",
 	"Local Models": "本機模型",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "由 OpenWebUI 社群製作",
