--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -281,6 +281,7 @@
 	"File": "檔案",
 	"File Mode": "檔案模式",
 	"File not found.": "找不到檔案。",
+	"File size exceeds the limit of {{size}}MB": "檔案大小超過限制 {{size}}MB",
 	"Filter": "篩選器",
 	"Files": "檔案",
 	"Filter is now globally disabled": "篩選器現在已全域禁用",
@@ -436,6 +437,7 @@
 	"On": "開啟",
 	"Only": "僅有",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "命令字串中只能包含英文字母、數字（0~9）和連字元（-）。",
+	"Only the first {{count}} files will be processed.": "僅處理前 {{count}} 個檔案。",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "哎呀！請稍等！您的文件還在處理中。我們正最佳化文件，請耐心等待，一旦準備好，我們會通知您。",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "哎呀！看起來 URL 無效。請仔細檢查後再試一次。",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "哎呀！先前的回應發生錯誤。請重試或聯絡管理員",
