💄 Limit the size and number of uploaded files on the front-end to optimize the upload speed
https://github.com/user-attachments/assets/3fb18878-1453-4920-8cad-4cbda5cb272c

![image](https://github.com/user-attachments/assets/dec4df6e-aed8-48cc-a887-4022c66c68c4)

![image](https://github.com/user-attachments/assets/ef469240-3cd2-45a4-85c7-f369f900f97b)

![image](https://github.com/user-attachments/assets/0b8b539c-8b28-444e-82e6-77284fc41ce9)

![image](https://github.com/user-attachments/assets/d76e001c-8283-4f85-92be-3ed304f6e344)

![image](https://github.com/user-attachments/assets/b10ff1b9-ba68-4710-8400-b94644694105)

--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Въведете идентификатор на двигателя на Google PSE",
 	"Enter Image Size (e.g. 512x512)": "Въведете размер на изображението (напр. 512x512)",
 	"Enter language codes": "Въведете кодове на езика",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Въведете таг на модел (напр. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Въведете брой стъпки (напр. 50)",
 	"Enter Score": "Въведете оценка",
@@ -278,6 +280,7 @@
 	"File": "",
 	"File Mode": "Файл Мод",
 	"File not found.": "Файл не е намерен.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "Управление на тръбопроводи",
 	"Manage Valves": "",
 	"March": "Март",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Макс токени (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Максимум 3 модели могат да бъдат сваляни едновременно. Моля, опитайте отново по-късно.",
 	"May": "Май",
@@ -430,6 +435,8 @@
 	"On": "Вкл.",
 	"Only": "Само",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "Само алфанумерични знаци и тире са разрешени в командния низ.",
+	"Only the first {{count}} files will be processed._one": "",
+	"Only the first {{count}} files will be processed._other": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "Упс! Задръжте! Файловете ви все още са в пещта за обработка. Готвим ги до съвършенство. Моля, бъдете търпеливи и ще ви уведомим, когато са готови.",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "Упс! Изглежда URL адресът е невалиден. Моля, проверете отново и опитайте пак.",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "",
