--- a/src/lib/i18n/locales/hi-IN/translation.json
+++ b/src/lib/i18n/locales/hi-IN/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Google PSE इंजन आईडी दर्ज करें",
 	"Enter Image Size (e.g. 512x512)": "छवि का आकार दर्ज करें (उदा. 512x512)",
 	"Enter language codes": "भाषा कोड दर्ज करें",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Model tag दर्ज करें (उदा. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "चरणों की संख्या दर्ज करें (उदा. 50)",
 	"Enter Score": "स्कोर दर्ज करें",
@@ -278,6 +280,7 @@
 	"File": "",
 	"File Mode": "फ़ाइल मोड",
 	"File not found.": "फ़ाइल प्राप्त नहीं हुई।",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "पाइपलाइनों का प्रबंधन करें",
 	"Manage Valves": "",
 	"March": "मार्च",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "अधिकतम टोकन (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "अधिकतम 3 मॉडल एक साथ डाउनलोड किये जा सकते हैं। कृपया बाद में पुन: प्रयास करें।",
 	"May": "मेई",
@@ -430,6 +435,8 @@
 	"On": "चालू",
 	"Only": "केवल",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "कमांड स्ट्रिंग में केवल अल्फ़ान्यूमेरिक वर्ण और हाइफ़न की अनुमति है।",
+	"Only the first {{count}} files will be processed._one": "",
+	"Only the first {{count}} files will be processed._other": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "उफ़! कृपया प्रतीक्षा करें, आपकी फ़ाइलें अभी भी प्रसंस्करण ओवन में हैं। हम उन्हें पूर्णता से पका रहे हैं। कृपया धैर्य रखें और जब वे तैयार हो जाएंगे तो हम आपको बता देंगे।",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "उफ़! ऐसा लगता है कि यूआरएल अमान्य है. कृपया दोबारा जांचें और पुनः प्रयास करें।",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "",
