--- a/src/lib/i18n/locales/lt-LT/translation.json
+++ b/src/lib/i18n/locales/lt-LT/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "",
 	"Enter Image Size (e.g. 512x512)": "Įveskite paveiksliuko dydį (pvz. 512x512)",
 	"Enter language codes": "Įveskite kalbos kodus",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Įveskite modelio žymą (pvz. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Įveskite žingsnių kiekį (pvz. 50)",
 	"Enter Score": "Įveskite rezultatą",
@@ -278,6 +280,7 @@
 	"File": "",
 	"File Mode": "Dokumentų rėžimas",
 	"File not found.": "Failas nerastas.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "",
 	"Manage Valves": "",
 	"March": "Kovas",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Daugiausiai trys modeliai gali būti parsisiunčiami vienu metu.",
 	"May": "gegužė",
@@ -430,6 +435,10 @@
 	"On": "Aktyvuota",
 	"Only": "Tiktais",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "Leistinos tik raidės, skaičiai ir brūkšneliai.",
+	"Only the first {{count}} files will be processed._one": "",
+	"Only the first {{count}} files will be processed._few": "",
+	"Only the first {{count}} files will be processed._many": "",
+	"Only the first {{count}} files will be processed._other": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "Jūsų failai vis dar tvarkomi.",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "Oops! Looks like the URL is invalid. Please double-check and try again.",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "",
