--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "輸入 Google PSE 引擎 ID",
 	"Enter Image Size (e.g. 512x512)": "輸入圖片大小（例如 512x512）",
 	"Enter language codes": "輸入語言代碼",
+	"Enter Max File Count": "单次上傳最大檔案數量",
+	"Enter Max File Size(MB)": "单次上傳最大檔案大小(MB)",
 	"Enter model tag (e.g. {{modelTag}})": "輸入模型標籤（例如 {{modelTag}}）",
 	"Enter Number of Steps (e.g. 50)": "輸入步數（例如 50）",
 	"Enter Score": "輸入分數",
@@ -278,6 +280,7 @@
 	"File": "檔案",
 	"File Mode": "檔案模式",
 	"File not found.": "找不到檔案。",
+	"File size exceeds the limit of {{size}}MB": "檔案大小超過限制 {{size}}MB",
 	"Files": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "管理管線",
 	"Manage Valves": "",
 	"March": "3 月",
+	"Max File Count": "最大檔案數量",
+	"Max File Size(MB)": "最大檔案大小",
 	"Max Tokens (num_predict)": "最大 Token（num_predict）",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "最多可以同時下載 3 個模型。請稍後再試。",
 	"May": "5 月",
@@ -430,6 +435,7 @@
 	"On": "開啟",
 	"Only": "僅有",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "命令字串中只能包含英文字母、數字（0~9）和連字元（-）。",
+	"Only the first {{count}} files will be processed._other": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "哎呀！請稍等！您的文件還在處理中。我們正最佳化文件，請耐心等待，一旦準備好，我們會通知您。",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "哎呀！看起來 URL 無效。請仔細檢查後再試一次。",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "哎呀！先前的回應發生錯誤。請重試或聯絡管理員",
