--- a/src/lib/i18n/locales/nb-NO/translation.json
+++ b/src/lib/i18n/locales/nb-NO/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Skriv inn Google PSE Motor-ID",
 	"Enter Image Size (e.g. 512x512)": "Skriv inn bildestørrelse (f.eks. 512x512)",
 	"Enter language codes": "Skriv inn språkkoder",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Skriv inn modelltag (f.eks. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Skriv inn antall steg (f.eks. 50)",
 	"Enter Score": "Skriv inn poengsum",
@@ -278,6 +280,7 @@
 	"File": "",
 	"File Mode": "Filmodus",
 	"File not found.": "Fil ikke funnet.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "Administrer pipelines",
 	"Manage Valves": "",
 	"March": "Mars",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Maks antall tokens (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Maksimalt 3 modeller kan lastes ned samtidig. Vennligst prøv igjen senere.",
 	"May": "Mai",
@@ -430,6 +435,8 @@
 	"On": "På",
 	"Only": "Kun",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "Kun alfanumeriske tegn og bindestreker er tillatt i kommandostrengen.",
+	"Only the first {{count}} files will be processed._one": "",
+	"Only the first {{count}} files will be processed._other": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "Oops! Hold deg fast! Filene dine er fortsatt i prosesseringsovnen. Vi tilbereder dem til perfeksjon. Vennligst vær tålmodig, vi gir beskjed når de er klare.",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "Oops! Ser ut som URL-en er ugyldig. Vennligst dobbeltsjekk og prøv igjen.",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "",
