--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Escreva o ID do mecanismo PSE do Google",
 	"Enter Image Size (e.g. 512x512)": "Escreva o Tamanho da Imagem (por exemplo, 512x512)",
 	"Enter language codes": "Escreva os códigos de idioma",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Escreva a tag do modelo (por exemplo, {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Escreva o Número de Etapas (por exemplo, 50)",
 	"Enter Score": "Escreva a Pontuação",
@@ -278,6 +280,7 @@
 	"File": "",
 	"File Mode": "Modo de Ficheiro",
 	"File not found.": "Ficheiro não encontrado.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "Gerir pipelines",
 	"Manage Valves": "",
 	"March": "Março",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Máx Tokens (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "O máximo de 3 modelos podem ser descarregados simultaneamente. Tente novamente mais tarde.",
 	"May": "Maio",
@@ -430,6 +435,9 @@
 	"On": "Ligado",
 	"Only": "Apenas",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "Apenas caracteres alfanuméricos e hífens são permitidos na string de comando.",
+	"Only the first {{count}} files will be processed._one": "",
+	"Only the first {{count}} files will be processed._many": "",
+	"Only the first {{count}} files will be processed._other": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "Epá! Segura-te! Os teus ficheiros ainda estão no forno de processamento. Estamos a cozinhá-los com perfeição. Por favor, seja paciente e avisaremos quando estiverem prontos.",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "Epá! Parece que o URL é inválido. Verifique novamente e tente outra vez.",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "",
