--- a/src/lib/i18n/locales/tk-TW/translation.json
+++ b/src/lib/i18n/locales/tk-TW/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "",
 	"Enter Image Size (e.g. 512x512)": "",
 	"Enter language codes": "",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "",
 	"Enter Number of Steps (e.g. 50)": "",
 	"Enter Score": "",
@@ -278,6 +280,7 @@
 	"File": "",
 	"File Mode": "",
 	"File not found.": "",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "",
 	"Manage Valves": "",
 	"March": "",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "",
 	"May": "",
@@ -430,6 +435,8 @@
 	"On": "",
 	"Only": "",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "",
+	"Only the first {{count}} files will be processed._one": "",
+	"Only the first {{count}} files will be processed._other": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "",
