--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "输入 Google PSE 引擎 ID",
 	"Enter Image Size (e.g. 512x512)": "输入图像分辨率 (例如：512x512)",
 	"Enter language codes": "输入语言代码",
+	"Enter Max File Count": "单次上传最大文件数量",
+	"Enter Max File Size(MB)": "单个文件最大大小(MB)",
 	"Enter model tag (e.g. {{modelTag}})": "输入模型标签 (例如：{{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "输入步骤数 (Steps) (例如：50)",
 	"Enter Score": "输入评分",
@@ -278,6 +280,7 @@
 	"File": "文件",
 	"File Mode": "文件模式",
 	"File not found.": "文件未找到。",
+	"File size exceeds the limit of {{size}}MB": "文件大小超过限制 {{size}}MB",
 	"Files": "文件",
 	"Filter is now globally disabled": "过滤器已全局禁用",
 	"Filter is now globally enabled": "过滤器已全局启用",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "管理 Pipeline",
 	"Manage Valves": "管理值",
 	"March": "三月",
+	"Max File Count": "文件数量",
+	"Max File Size(MB)": "文件大小(MB)",
 	"Max Tokens (num_predict)": "最多 Token (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "最多可以同时下载 3 个模型，请稍后重试。",
 	"May": "五月",
@@ -430,6 +435,7 @@
 	"On": "开启",
 	"Only": "仅",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "命令字符串中只允许使用英文字母，数字 (0-9) 以及连字符 (-)。",
+	"Only the first {{count}} files will be processed._other": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "糟糕！请稍等！您的文件还在处理中。我们正在努力让它们达到最佳效果。请耐心等待，准备好后我们会通知您。",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "糟糕！此链接似乎为无效链接。请检查后重试。",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "糟糕！之前的回复出现了错误。请重试或联系管理员。",
