👀 优化成环境变量
👀 优化成环境变量

Update config.py

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -239,6 +239,8 @@
 	"Enter Image Size (e.g. 512x512)": "输入图像分辨率 (例如：512x512)",
 	"Enter language codes": "输入语言代码",
 	"Enter model tag (e.g. {{modelTag}})": "输入模型标签 (例如：{{modelTag}})",
+	"Enter MAX FILE COUNT": "单次上传最大文件数量",
+	"Enter MAX FILE SIZE(MB)": "单个文件最大大小(MB)",
 	"Enter Number of Steps (e.g. 50)": "输入步骤数 (Steps) (例如：50)",
 	"Enter Score": "输入评分",
 	"Enter Searxng Query URL": "输入 Searxng 查询地址",
@@ -368,6 +370,8 @@
 	"Manage Pipelines": "管理 Pipeline",
 	"Manage Valves": "管理值",
 	"March": "三月",
+	"MAX FILE COUNT": "文件数量",
+	"MAX FILE SIZE(MB)": "文件大小(MB)",
 	"Max Tokens (num_predict)": "最多 Token (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "最多可以同时下载 3 个模型，请稍后重试。",
 	"May": "五月",
